# stock_price_predictor

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  config.cfg  pyproject.toml
data/processed/: prices.parquet
data/scraped/news/: scraped_data_000_2025-04-13-14-45-17.parquet  scraped_data_000_2025-04-13-21-54-44.parquet  scraped_data_000_2025-04-14-18-32-15.parquet  scraped_data_000_2025-04-15-18-39-01.parquet  scraped_data_000_2025-04-16-17-56-51.parquet  scraped_data_001_2025-04-13-14-46-16.parquet  scraped_data_001_2025-04-13-21-55-49.parquet  scraped_data_001_2025-04-14-18-33-13.parquet  scraped_data_001_2025-04-15-18-40-01.parquet  scraped_data_001_2025-04-16-17-57-46.parquet  scraped_data_002_2025-04-13-14-47-12.parquet  scraped_data_002_2025-04-13-21-56-49.parquet  scraped_data_002_2025-04-14-18-34-16.parquet  scraped_data_002_2025-04-15-18-40-55.parquet  scraped_data_002_2025-04-16-17-58-42.parquet  scraped_data_003_2025-04-13-14-48-10.parquet  scraped_data_003_2025-04-13-21-57-54.parquet  scraped_data_003_2025-04-14-18-35-15.parquet  scraped_data_003_2025-04-15-18-41-52.parquet  scraped_data_003_2025-04-16-17-59-44.parquet  scraped_data_004_2025-04-13-14-49-14.parquet  scraped_data_004_2025-04-13-21-58-58.parquet  scraped_data_004_2025-04-14-18-36-11.parquet  scraped_data_004_2025-04-15-18-42-48.parquet  scraped_data_004_2025-04-16-18-00-46.parquet  scraped_data_005_2025-04-13-14-50-24.parquet  scraped_data_005_2025-04-13-21-59-53.parquet  scraped_data_005_2025-04-14-18-37-06.parquet  scraped_data_005_2025-04-15-18-43-47.parquet  scraped_data_005_2025-04-16-18-01-45.parquet  scraped_data_006_2025-04-13-14-51-23.parquet  scraped_data_006_2025-04-13-22-00-51.parquet  scraped_data_006_2025-04-14-18-38-01.parquet  scraped_data_006_2025-04-15-18-44-51.parquet  scraped_data_006_2025-04-16-18-03-02.parquet  scraped_data_007_2025-04-13-14-52-29.parquet  scraped_data_007_2025-04-13-22-01-58.parquet  scraped_data_007_2025-04-14-18-39-03.parquet  scraped_data_007_2025-04-15-18-46-05.parquet  scraped_data_007_2025-04-16-18-04-01.parquet  (+453 more)
data/scraped/prices/: scraped_yahoo_finance_stock_prices_spider_2025-04-23T21-21-12+00-00_1.parquet  scraped_yahoo_finance_stock_prices_spider_2025-04-23T21-21-21+00-00_2.parquet  scraped_yahoo_finance_stock_prices_spider_2025-04-26T14-57-30+00-00_1.parquet
models/: stock_price_predictor_forecaster.pkl
src/: stock_price_prediction.py
utils/: utils.py
