[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock_price_predictor"
version = "0.0.1"
dependencies = ["pandas", "polars[gpu]", "tqdm", "nltk", "xgboost", "gensim", "spacy[cuda11x,transformers,lookups]", "scikit-learn", "tox", "memray"] 
requires-python = ">=3.12, <3.13"
authors = [
  {name = "Konstantinos Skepetaris", email = "tsepe21@hotmail.com"}
]
maintainers = [
  {name = "Konstantinos Skepetaris", email = "tsepe21@hotmail.com"}
]
description = "A repository that does stock price prediction"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["llm", "nlp", "ml", "neural networks", "deep learning", "transformers", "data science", "stocks", "stock market", "stock prices", "stock price prediction"]
classifiers = ["Programming Language :: Python :: 3.12"]

[project.urls]
Homepage = "https://github.com/blaxovios/stock_price_predictor"
Repository = "https://github.com/blaxovios/stock_price_predictor"
"Bug Tracker" = "https://github.com/blaxovios/stock_price_predictor/issues"
Changelog = "https://github.com/blaxovios/stock_price_predictor/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
[tool.ruff.lint]
select = ["NPY201", "E4", "E7", "E9", "F"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py311, py312, coverage

[testenv]
deps =
    pytest
commands =
    pytest

[testenv:coverage]
deps =
    pytest
    pytest-cov
commands =
    pytest --cov=my_package
    coverage report
    coverage html  # Optional: Generates an HTML report
"""